--- a/www/index.html
+++ b/www/index.html
@@ -22,13 +22,25 @@
 
 	<!-- your app's js -->
 	<script src="js/app.js"></script>
+
+	<!-- Directives -->
+	<script src="directives/star-rating.js"></script>
+
+	<!-- Common Controllers -->
 	<script src="common/controllers/AppController.js"></script>
 	<script src="common/controllers/LoginController.js"></script>
+	<!-- User Controllers -->
 	<script src="user/controllers/ProfileController.js"></script>
 	<script src="user/controllers/MapController.js"></script>
+	<script src="user/controllers/FavoritesController.js"></script>
+	<!--User Services -->
+	<script src="user/services/UserService.js"></script>
+	<!-- Professional Controllers -->
 	<script src="professional/controllers/CalendarController.js"></script>
 	<script src="professional/controllers/AppointmentController.js"></script>
 	<script src="professional/controllers/ProfileController.js"></script>
+	<!-- Professional Services -->
+
 </head>
 
 <body ng-app="starter" ng-controller="AppCtrl">
